What I mean (and everybody else means) by the word QUALITY cannot be broken down into subjects and predicates.  This is not because Quality is so mysterious but because Quality is so simple, immediate, and direct. 		-- R. Pirsig, "Zen and the Art of Motorcycle Maintenance"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <div class="center">
 	<h1>Fifty Shades</h1>
 	<p>Obsessed with finding the perfect shade of grey, I scoured the internet tirelessly looking for the one.</p>
+	<p>Scroll over to see who uses what.</p>
 
 	<div id='swaths'>
 	</div>
