We laugh at the Indian philosopher, who to account for the support of the earth, contrived the hypothesis of a huge elephant, and to support the elephant, a huge tortoise.  If we will candidly confes the truth, we know as little of the operation of the nerves, as he did of the manner in which the earth is supported: and our hypothesis about animal spirits, or about the tension and vibrations of the nerves, are as like to be true, as his about the support of the earth.  His elephant was a hypothesis, and our hypotheses are elephants.  Every theory in philosophy, which is built on pure conjecture, is an elephant; and every theory that is supported partly by fact, and partly by conjecture, is like Nebuchadnezzar's image, whose feet were partly of iron, and partly of clay. 		-- Thomas Reid, "An Inquiry into the Human Mind", 1764

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 	<title>Fifty Shades</title>
 	<link rel="stylesheet" type="text/css" href="fonts/lato/Lato/latofonts.css">
 	<link rel="stylesheet" type="text/css" href="magic.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 </head>
 <body>
+	<a class="github-fork-ribbon" href="http://github.com/sean-smith/fiftyshades" title="Fork me on GitHub">Fork me on GitHub</a>
+
 <div class="center">
 	<h1>Fifty Shades</h1>
 	<p>Obsessed with finding the perfect shade of grey, I scoured the internet tirelessly looking for the one.</p>
