Only the fittest survive. The vanquished acknowledge their unworthines by placing a clasified ad with the ritual phrase "must sell -- best offer," and thereafter dwell in infamy, relegated to discusing gas mileage and lawn food.  But if succesful, you join the elite sodality that spends hours unpurifying the dialect of the tribe with arcane talk of bits and bytes, RAMS and ROMS, hard disks and baud rates. Are you obnoxious, obsesed?  It's a modest price to pay.  For you have tapped into the same awesome primal power that produces credit-card billing errors and lost plane reservations.  Hail, postindustrial warrior, subduer of Bounceoids, pride of the cosmos, keeper of the silicone creed: Computo, ergo sum.  The force is with you -- at 110 volts. May your RAMS be fruitful and multiply. 		-- Curt Suplee, "Smithsonian", 4/83

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id='swaths'>
 	</div>
 
-	<p>I can hapilly say that I've found it.</p>
+	<p>I can happily say that I've found it.</p>
 	<p style='padding: 6px 12px 6px 12px;'>It's <code id='perfect'>#F3F3F3</code></p>
 	<script type="text/javascript" src="darker.js"></script>
 </div>
